# lguma

./: .gitignore  CMakeLists.txt  LICENSE
apps/: CMakeLists.txt  app.cpp
include/: Ast.hpp  Env.hpp  Forward.hpp  FunctionObject.hpp  GCObject.hpp  Heap.hpp  Interpreter.hpp  OpCode.hpp  Register.hpp  Value.hpp  Visitor.hpp  Vm.hpp  cdefs.hpp
src/: Ast.cpp  CMakeLists.txt  Env.cpp  Value.cpp  Vm.cpp  core.cpp
